# Meridian

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  config.yaml  delay_proxy.py  docker-compose.audit.yaml  docker-compose.kafka-demo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: dual_backend.yaml  enterprise_example.yaml  local_gpu.yaml  local_gpu_audit.yaml  mock_demo.yaml  poc_design_partner.yaml  tiering_demo.yaml
docs/: AIRGAP.md  AUDIT_E2E.md  CONFIGURATION.md  DEPLOY.md  ENTERPRISE_COST.md  KNOWN_ISSUES.md  LOAD.md  MILESTONES.md  OPS_RUNBOOK.md  PITCH.md  POC_REPORT.md  QUICKSTART.md  README.md  ROADMAP.md  V1_GATE.md  V1_ROADMAP.md  ship.md
docs/internal/: ENTERPRISE_PROPOSAL.md  PITCH.md  (+8 more)
examples/: demo.sh
meridian/: __init__.py
mock_backend/: Dockerfile  server.py
scripts/: bench_overhead.py  gen_audit_keys.py  package_airgap.sh  smoke_test.py  verify_audit_archive.py
tests/: _mock_uvicorn.py  conftest.py  test_affinity.py  test_affinity_routing.py  test_api_integration.py  test_audit.py  test_auth_gate.py  test_auth_keys.py  test_budget_reconcile.py  test_budgets.py  test_config.py  test_cost.py  test_enterprise_e2e.py  test_hardening.py  test_identity_logging.py  test_key_reload.py  test_model_access.py  test_pii.py  test_rate_limit_store.py  test_ratelimit.py  test_ratelimit_identity.py  test_registry.py  test_router.py  test_telemetry_json.py  test_telemetry_poller.py  test_tiering.py  test_tiering_selection.py  test_token_estimator.py  test_usage_meter.py
(+65 files in other folders)
