[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian"
version = "0.9.2"
description = "On-soil AI inference gateway for Indian enterprises"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "prometheus-client",
    "aiokafka",
    "cryptography",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "types-PyYAML",
    "rich",
]

[project.scripts]
meridian = "meridian.cli.main:cli"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
